<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_apn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textView_apn"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_apn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/textView_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textView_server"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_server"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textView_port"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_port"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_server_write"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_server_write"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/button_server_read" />

    <Button
        android:id="@+id/button_server_read"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_server_read"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/editText_server" />

    <Button
        android:id="@+id/button_apn_write"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_apn_write"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/editText_apn" />

    <Button
        android:id="@+id/button_apn_read"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_apn_read"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/editText_apn" />

    <Button
        android:id="@+id/button_port_write"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_port_write"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/button_port_read" />

    <Button
        android:id="@+id/button_port_read"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_port_read"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/editText_port" />

    <Button
        android:id="@+id/button_provider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_provider"
        app:layout_constraintStart_toEndOf="@+id/textView_server"
        app:layout_constraintTop_toBottomOf="@+id/editText_port" />

    <Button
        android:id="@+id/button_init"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_init"
        app:layout_constraintEnd_toEndOf="@+id/button_disconnect"
        app:layout_constraintStart_toStartOf="@+id/button_disconnect"
        app:layout_constraintTop_toTopOf="@+id/button_provider" />

    <Button
        android:id="@+id/button_connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_connect"
        app:layout_constraintEnd_toEndOf="@+id/button_provider"
        app:layout_constraintStart_toStartOf="@+id/button_provider"
        app:layout_constraintTop_toBottomOf="@+id/button_provider" />

    <Button
        android:id="@+id/button_disconnect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/button_disconnect"
        app:layout_constraintStart_toEndOf="@+id/button_connect"
        app:layout_constraintTop_toTopOf="@+id/button_connect" />

    <EditText
        android:id="@+id/editText_apn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="7"
        android:inputType="textPersonName"

        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/textView_server"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_server"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="7"
        android:inputType="textPersonName"
        android:text="@string/editText_server"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/textView_server"
        app:layout_constraintTop_toBottomOf="@+id/editText_apn" />

    <EditText
        android:id="@+id/editText_port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="7"
        android:inputType="number"
        android:text="@string/editText_port"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/textView_server"
        app:layout_constraintTop_toBottomOf="@+id/editText_server" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>

